@@ -203,7 +203,7 @@ private:
      * @brief Check a file using stream
      * @param file the file
      * @param cfgname  cfg name
-     * @param createTokenList a function to create the simplecpp::TokenList with
+     * @param createTokenList a function to create the simplecpp::TokenList with - throws simplecpp::Output
      * @return number of errors found
      */
     unsigned int checkInternal(const FileWithDetails& file, const std::string &cfgname, int fileIndex, const CreateTokenListFn& createTokenList);
