@@ -142,7 +142,7 @@ public:
 
     bool reportOutput(const simplecpp::OutputList &outputList, bool showerror);
 
-    void error(const std::string &filename, unsigned int linenr, const std::string &msg);
+    void error(const std::string &filename, unsigned int linenr, const std::string &msg, simplecpp::Output::Type type);
 
 private:
     static bool hasErrors(const simplecpp::Output &output);
